fixed layout issues

--- a/content/scss/base/_colors.scss
+++ b/content/scss/base/_colors.scss
@@ -1,5 +1,6 @@
 $color-bg-primary: #fff;
 $color-bg-secondary: #98def5;
+$navbar-default-bg: aliceblue;
 $color-bg-tertiary: #bf0000;
 $color-primary: #000;
 $color-secondary: #555;
