--- a/content/scss/modules/_footer.scss
+++ b/content/scss/modules/_footer.scss
@@ -7,3 +7,7 @@ footer {
 .social-icon {
   font-size: 32px;
 }
+
+.copyright {
+  text-align: center;
+}
