--- a/content/scss/modules/_posts.scss
+++ b/content/scss/modules/_posts.scss
@@ -47,7 +47,6 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
-      z-index: -1;
     }
 
     .excerpt {
@@ -74,6 +73,7 @@
     white-space: nowrap;
   }
 }
+
 .post {
   h2 {
     font-size: 12px;
@@ -106,10 +106,4 @@
     text-align: center;
   }
 
-}
-
-.posts {
-  background-color: $color-bg-primary;
-  position: relative;
-  top: 45vw;
 }
